// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherData should render correctly 1`] = `
<DocumentFragment>
  <div
    class="weatherData-Container"
  >
    <h4>
      Datos del clima 🌡️
    </h4>
    <p
      class="dataRow"
    >
      Temperatura actual: 10ºC
    </p>
    <p
      class="dataRow"
    >
      Humedad: 20%
    </p>
    <p
      class="dataRow"
    >
      Presión: 30hPa
    </p>
    <p
      class="dataRow"
    >
      Viento: 40m/s
    </p>
    <p
      class="dataRow"
    >
      Estado del cielo: Clouds
    </p>
    <p
      class="dataRow"
    >
      Descripción del cielo: scattered clouds
    </p>
    <p
      class="dataRow"
    >
      Fecha: 30/8/2020
    </p>
    <p
      class="dataRow"
    >
      Hora: 04:06:40
    </p>
  </div>
</DocumentFragment>
`;

exports[`WeatherData should render correctly when isLoading is true 1`] = `
<DocumentFragment>
  <h2>
    Cargando datos del clima... ⏳
  </h2>
</DocumentFragment>
`;

exports[`WeatherData should render correctly when weatherData is empty 1`] = `
<DocumentFragment>
  <h2>
    Error al obtener los datos del clima 💀
  </h2>
</DocumentFragment>
`;
